# torchmix

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: .gitignore  _meta.json  components.py  next.config.js  package.json  run.py  theme.config.tsx  vercel.json
docs/examples/: BERT.py  GPT.py  ViT.py  VisionTransformer.py
docs/pages/: _meta.json  component.mdx  config.mdx  global-configs.mdx  hydra.mdx  index.mdx  no-parameters.mdx  no_parameters.mdx
docs/pages/components/: Add.mdx  Attach.mdx  Attention.mdx  AvgPool.mdx  ChannelMixer.mdx  ClassEmbedding.mdx  ClassPool.mdx  DropPath.mdx  Dropout.mdx  Extract.mdx  Feedforward.mdx  MLP.mdx  Mul.mdx  PatchEmbed.mdx  PatchEmbedding.mdx  PatchMerge.mdx  PatchMerging.mdx  PositionEmbed.mdx  PositionalEmbedding.mdx  PostNorm.mdx  PreNorm.mdx  Reduce.mdx  RelativePositionBias.mdx  Repeat.mdx  SelfAttention.mdx  SinusoidalEmbedding.mdx  StochasticDepth.mdx  Token.mdx  TokenMixer.mdx  VocabEmbedding.mdx  WindowAttention.mdx  _meta.json
docs/pages/examples/: BERT.mdx  ViT.mdx  VisionTransformer.mdx  _meta.json  gpt.mdx
docs/pages/plugins/: AttentionPlugin.mdx  CausalMask.mdx  DropActivation.mdx  DropAttention.mdx  DropProjection.mdx  DropProjectionIn.mdx  DropProjectionOut.mdx  MLPPlugin.mdx  RelativePositionBias.mdx  RelativePositionBiasViT.mdx  RotaryEmbedding.mdx  SubLayerNorm.mdx  SubNorm.mdx  Transpose.mdx  _meta.json
docs/src/: components.py  examples.py  plugins.py
examples/: README.md
examples/global_configs/: README.md  main.py
examples/no_parameters/: README.md  main.py
examples/partial/: README.md  custom.yaml  main.py
tests/: conftest.py  test_attention.py  test_config_context.py  test_container.py  test_context.py  test_module.py  test_nn.py  test_serde.py  test_third_party.py
torchmix/: __init__.py
torchmix/components/: __init__.py  _token.py  attentions.py  avg_pool.py  channel_mixer.py  containers.py  drop.py  embedding.py  extract.py  patch_embed.py  patch_merging.py  pool.py  position_embed.py  relative_position_bias.py  self_attention.py  token_mixer.py  window_attention.py
torchmix/components/attention/: __init__.py  base.py  plugin.py  vit.py
torchmix/components/container/: attach.py  drop.py  norm.py  repeat.py
torchmix/components/containers/: __init__.py  add.py  arithmetic.py  attach.py  drop.py  norm.py  post_norm.py  pre_norm.py  repeat.py
torchmix/components/feedforward/: __init__.py  base.py  plugin.py
torchmix/components/layers/: __init__.py  attentions.py
torchmix/components/mlp/: __init__.py  base.py  plugin.py
torchmix/core/: _builds.py  _component.py  _context.py  _module.py  component.py
torchmix/nn/: __codegen.py  __init__.py
