[tool.poetry]
name = "torchmix"
version = "0.1.0rc7"
description = "A collection of useful PyTorch modules"
authors = ["junhsss <junhsssr@gmail.com>"]
readme = "README.md"
packages = [
    { include = "torchmix" }
]


[tool.poetry.dependencies]
python = ">=3.8"
hydra-zen = ">=0.8.0"
hydra-core = ">=1.0.0"
jaxtyping = ">=0.2.0"
einops = ">=0.6.0"

[tool.poetry.group.dev.dependencies]
torch = ">=1.11.0"
black = "^22.12.0"
numpy = "^1.24.1"
pytest = "^7.2.0"
py-spy = "^0.3.14"
commitizen = "^2.38.0"
taskipy = "^1.10.3"
pyright = "^1.1.286"
beartype = "^0.11.0"
docstring-parser = "^0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
commit = { cmd = "cz commit", help = "commitizen" }
test = { cmd ="pytest", help = "test" }
lint = { cmd = "pre-commit run --all-files", help = "pre-commit lint" }
profile = { cmd = "py-spy record -o profile.svg -- python benchmark.py", help = "tracing" }
codegen = { cmd = "python torchmix/nn/__codegen.py", help = "codegen"}
docgen = { cmd = "python docs/src/components.py", help = "generate documentations" }
start = { cmd = "(cd docs && pnpm next)", help = "start doc server" }

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.refurb]
ignore = [107]

[tool.ruff]
line-length = 88
ignore = ["F403", "F405", "F722", "E501"]
exclude = ["docs/*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
